# chat_app

./: .gitignore  README.md  download_model.py  main.py  pyproject.toml
templates/: index.html
